Стилізовано хедер для планшетної та десктопної версії

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
           >
           <ul class="ul-reset nav-list">
             <li class="nav-list__item">
-              <a href="" class="link-reset current nav-link">Студия</a>
+              <a href="" class="link-reset current nav-list__link">Студия</a>
             </li>
             <li class="nav-list__item">
-              <a href="./portfolio.html" class="link-reset nav-link"
+              <a href="./portfolio.html" class="link-reset nav-list__link"
                 >Портфолио</a
               >
             </li>
             <li class="nav-list__item">
-              <a href="" class="link-reset nav-link">Контакты</a>
+              <a href="" class="link-reset nav-list__link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -46,9 +46,13 @@
           <li class="header-contact-list__item">
             <a
               href="mailto:info@devstudio.com"
-              class="link-reset header-contact-list__link"
+              class="link-reset header-contact-list__link contact-email"
             >
-              <svg class="link-icon" width="16" height="12">
+              <svg
+                class="header-contact-list__link-icon"
+                width="16"
+                height="12"
+              >
                 <use href="./images/icons/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -57,9 +61,13 @@
           <li class="header-contact-list__item">
             <a
               href="tel:+380961111111"
-              class="link-reset header-contact-list__lin"
+              class="link-reset header-contact-list__link contact-tel"
             >
-              <svg class="link-icon" width="10" height="16">
+              <svg
+                class="header-contact-list__link-icon"
+                width="10"
+                height="16"
+              >
                 <use href="./images/icons/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
