--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
           >
           <ul class="ul-reset nav-list">
             <li class="nav-list__item">
-              <a href="" class="link-reset nav-list__link">Студия</a>
+              <a href="./index.html" class="link-reset nav-list__link"
+                >Студия</a
+              >
             </li>
             <li class="nav-list__item">
               <a
