--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </header>
 
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">
             Эффективные решения <br />
@@ -166,7 +166,7 @@
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section preferences">
         <div class="container">
@@ -587,7 +587,7 @@
       </div>
     </footer> -->
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button type="button" class="close-button" data-modal-close>
           <svg class="close-button-icon">
@@ -672,7 +672,7 @@
           <button type="submit" class="submit-button">Отправить</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
