--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
       </section>
 
-      <!-- <section class="section preferences">
+      <section class="section preferences">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="ul-reset preferences-list">
@@ -222,7 +222,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section services">
         <div class="container">
