--- a/index.html
+++ b/index.html
@@ -171,51 +171,51 @@
       <section class="section preferences">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="ul-reset preferences-list">
-            <li class="list-item">
-              <div class="preferences-icon-wrap">
-                <svg class="link-icon">
+          <ul class="ul-reset preferences__list">
+            <li class="preferences__item">
+              <div class="preferences__icon-wrap">
+                <svg class="preferences__icon">
                   <use href="./images/icons/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="preferences-title">Внимание к деталям</h3>
-              <p class="preferences-descr">
+              <h3 class="preferences__title">Внимание к деталям</h3>
+              <p class="preferences__descr">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="list-item">
-              <div class="preferences-icon-wrap">
-                <svg class="link-icon">
+            <li class="preferences__item">
+              <div class="preferences__icon-wrap">
+                <svg class="preferences__icon">
                   <use href="./images/icons/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="preferences-title">Пунктуальность</h3>
-              <p class="preferences-descr">
+              <h3 class="preferences__title">Пунктуальность</h3>
+              <p class="preferences__descr">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="list-item">
-              <div class="preferences-icon-wrap">
-                <svg class="link-icon">
+            <li class="preferences__item">
+              <div class="preferences__icon-wrap">
+                <svg class="preferences__icon">
                   <use href="./images/icons/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="preferences-title">Планирование</h3>
-              <p class="preferences-descr">
+              <h3 class="preferences__title">Планирование</h3>
+              <p class="preferences__descr">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="list-item">
-              <div class="preferences-icon-wrap">
-                <svg class="link-icon">
+            <li class="preferences__item">
+              <div class="preferences__icon-wrap">
+                <svg class="preferences__icon">
                   <use href="./images/icons/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="preferences-title">Современные технологии</h3>
-              <p class="preferences-descr">
+              <h3 class="preferences__title">Современные технологии</h3>
+              <p class="preferences__descr">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
