Адаптовано секіцію Services

--- a/index.html
+++ b/index.html
@@ -224,33 +224,33 @@
         </div>
       </section>
 
-      <!-- <section class="section services">
+      <section class="section services">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="ul-reset services-list">
-            <li class="list-item">
+          <ul class="ul-reset services__list">
+            <li class="services__item">
               <img
                 src="./images/site.jpg"
                 alt="руки на клавиатуре"
                 width="370"
               />
-              <p class="services-descr">Десктопные приложения</p>
+              <p class="services__descr">Десктопные приложения</p>
             </li>
-            <li class="list-item">
+            <li class="services__item">
               <img
                 src="./images/app.jpg"
                 alt="мобильный телефон в руках"
                 width="370"
               />
-              <p class="services-descr">Мобильные приложения</p>
+              <p class="services__descr">Мобильные приложения</p>
             </li>
-            <li class="list-item">
+            <li class="services__item">
               <img src="./images/design.jpg" alt="палитра цветов" width="370" />
-              <p class="services-descr">Дизайнерские решения</p>
+              <p class="services__descr">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section team">
         <div class="container">
