--- a/index.html
+++ b/index.html
@@ -728,55 +728,55 @@
         </div>
       </section>
 
-      <!-- <section class="section clients">
+      <section class="section clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="ul-reset client-list">
-            <li class="list-item">
-              <a href="" class="link-reset link">
-                <svg class="link-icon" width="41" height="47">
+          <ul class="ul-reset client__list">
+            <li class="client__item">
+              <a href="" class="link-reset client__link">
+                <svg class="client__icon" width="41" height="47">
                   <use href="./images/icons/sprite.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item">
-              <a href="" class="link-reset link">
-                <svg class="link-icon" width="40" height="52">
+            <li class="client__item">
+              <a href="" class="link-reset client__link">
+                <svg class="client__icon" width="40" height="52">
                   <use href="./images/icons/sprite.svg#icon-client-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item">
-              <a href="" class="link-reset link">
-                <svg class="link-icon" width="43" height="41">
+            <li class="client__item">
+              <a href="" class="link-reset client__link">
+                <svg class="client__icon" width="43" height="41">
                   <use href="./images/icons/sprite.svg#icon-client-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item">
-              <a href="" class="link-reset link">
-                <svg class="link-icon" width="84" height="41">
+            <li class="client__item">
+              <a href="" class="link-reset client__link">
+                <svg class="client__icon" width="84" height="41">
                   <use href="./images/icons/sprite.svg#icon-client-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item">
-              <a href="" class="link-reset link">
-                <svg class="link-icon" width="63" height="45">
+            <li class="client__item">
+              <a href="" class="link-reset client__link">
+                <svg class="client__icon" width="63" height="45">
                   <use href="./images/icons/sprite.svg#icon-client-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item">
-              <a href="" class="link-reset link">
-                <svg class="link-icon" width="94" height="44">
+            <li class="client__item">
+              <a href="" class="link-reset client__link">
+                <svg class="client__icon" width="94" height="44">
                   <use href="./images/icons/sprite.svg#icon-client-6"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer">
