--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="contacts">
           <a href="" class="link-reset logo footer-logo">
@@ -850,7 +850,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
