--- a/index.html
+++ b/index.html
@@ -779,52 +779,52 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
-        <div class="contacts">
-          <a href="" class="link-reset logo footer-logo">
+        <div class="footer__contacts">
+          <a href="" class="link-reset logo footer__logo">
             <span class="logo-accent">Web</span>Studio
           </a>
-          <address class="footer-contact">
+          <address class="footer__address">
             г. Киев, пр-т Леси Украинки, 26
             <a
               href="mailto:info@example.com"
-              class="link-reset footer-contact-link"
+              class="link-reset footer__contact-link"
               >info@example.com
             </a>
-            <a href="tel:+380991111111" class="link-reset footer-contact-link"
+            <a href="tel:+380991111111" class="link-reset footer__contact-link"
               >(111) 222-33-44</a
             >
           </address>
         </div>
 
         <div class="join">
-          <p class="join-text">присоединяйтесь</p>
-          <ul class="ul-reset soc-links">
-            <li class="list-item" aria-label="ссылка на Instagram">
-              <a href="" class="link-reset link">
-                <svg class="link-icon">
+          <p class="join__text">присоединяйтесь</p>
+          <ul class="ul-reset join__soc-list">
+            <li class="join__item" aria-label="ссылка на Instagram">
+              <a href="" class="link-reset join__soc-link">
+                <svg class="join__soc-icon">
                   <use href="./images/icons/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item" aria-label="ссылка на Twitter">
-              <a href="" class="link-reset link">
-                <svg class="link-icon">
+            <li class="join__item" aria-label="ссылка на Twitter">
+              <a href="" class="link-reset join__soc-link">
+                <svg class="join__soc-icon">
                   <use href="./images/icons/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item" aria-label="ссылка на Facebook">
-              <a href="" class="link-reset link">
-                <svg class="link-icon">
+            <li class="join__item" aria-label="ссылка на Facebook">
+              <a href="" class="link-reset join__soc-link">
+                <svg class="join__soc-icon">
                   <use href="./images/icons/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="list-item" aria-label="ссылка на Linkedin">
-              <a href="" class="link-reset link">
-                <svg class="link-icon">
+            <li class="join__item" aria-label="ссылка на Linkedin">
+              <a href="" class="link-reset join__soc-link">
+                <svg class="join__soc-icon">
                   <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -832,25 +832,25 @@
           </ul>
         </div>
 
-        <div class="footer-form-wrapper">
-          <strong class="footer-form-text">Подпишитесь на рассылку</strong>
+        <div class="footer-form__wrapper">
+          <strong class="footer-form__text">Подпишитесь на рассылку</strong>
           <form class="footer-form">
             <input
               type="email"
               name="email"
               placeholder="E-mail"
-              class="footer-form-field"
+              class="footer-form__field"
             />
-            <button type="submit" class="footer-form-btn">
+            <button type="submit" class="footer-form__btn">
               Подписаться
-              <svg class="footer-icon-send">
+              <svg class="footer-form__icon-send">
                 <use href="./images/icons/sprite.svg#icon-send"></use>
               </svg>
             </button>
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
