Адаптовано футер під мобільну версію

--- a/index.html
+++ b/index.html
@@ -799,32 +799,32 @@
         </div>
 
         <div class="join">
-          <p class="join__text">присоединяйтесь</p>
-          <ul class="ul-reset join__soc-list">
-            <li class="join__item" aria-label="ссылка на Instagram">
-              <a href="" class="link-reset join__soc-link">
-                <svg class="join__soc-icon">
+          <b class="footer__subtitle">присоединяйтесь</b>
+          <ul class="ul-reset soc-list">
+            <li class="soc-list__item" aria-label="ссылка на Instagram">
+              <a href="" class="link-reset soc-list__link">
+                <svg class="soc-list__icon">
                   <use href="./images/icons/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item" aria-label="ссылка на Twitter">
-              <a href="" class="link-reset join__soc-link">
-                <svg class="join__soc-icon">
+            <li class="soc-list__item" aria-label="ссылка на Twitter">
+              <a href="" class="link-reset soc-list__link">
+                <svg class="soc-list__icon">
                   <use href="./images/icons/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item" aria-label="ссылка на Facebook">
-              <a href="" class="link-reset join__soc-link">
-                <svg class="join__soc-icon">
+            <li class="soc-list__item" aria-label="ссылка на Facebook">
+              <a href="" class="link-reset soc-list__link">
+                <svg class="soc-list__icon">
                   <use href="./images/icons/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item" aria-label="ссылка на Linkedin">
-              <a href="" class="link-reset join__soc-link">
-                <svg class="join__soc-icon">
+            <li class="soc-list__item" aria-label="ссылка на Linkedin">
+              <a href="" class="link-reset soc-list__link">
+                <svg class="soc-list__icon">
                   <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -833,7 +833,7 @@
         </div>
 
         <div class="footer-form__wrapper">
-          <strong class="footer-form__text">Подпишитесь на рассылку</strong>
+          <strong class="footer__subtitle">Подпишитесь на рассылку</strong>
           <form class="footer-form">
             <input
               type="email"
