Адаптовано футер для планшетної версії

--- a/index.html
+++ b/index.html
@@ -780,56 +780,60 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <div class="footer__contacts">
-          <a href="" class="link-reset logo footer__logo">
-            <span class="logo-accent">Web</span>Studio
-          </a>
-          <address class="footer__address">
-            г. Киев, пр-т Леси Украинки, 26
-            <a
-              href="mailto:info@example.com"
-              class="link-reset footer__contact-link"
-              >info@example.com
+      <div class="container footer__container">
+        <div class="footer__contact-thumb">
+          <div class="footer__contacts">
+            <a href="" class="link-reset logo footer__logo">
+              <span class="logo-accent">Web</span>Studio
             </a>
-            <a href="tel:+380991111111" class="link-reset footer__contact-link"
-              >(111) 222-33-44</a
-            >
-          </address>
-        </div>
+            <address class="footer__address">
+              г. Киев, пр-т Леси Украинки, 26
+              <a
+                href="mailto:info@example.com"
+                class="link-reset footer__contact-link"
+                >info@example.com
+              </a>
+              <a
+                href="tel:+380991111111"
+                class="link-reset footer__contact-link"
+                >(111) 222-33-44</a
+              >
+            </address>
+          </div>
 
-        <div class="join">
-          <b class="footer__subtitle">присоединяйтесь</b>
-          <ul class="ul-reset soc-list">
-            <li class="soc-list__item" aria-label="ссылка на Instagram">
-              <a href="" class="link-reset soc-list__link">
-                <svg class="soc-list__icon">
-                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="soc-list__item" aria-label="ссылка на Twitter">
-              <a href="" class="link-reset soc-list__link">
-                <svg class="soc-list__icon">
-                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="soc-list__item" aria-label="ссылка на Facebook">
-              <a href="" class="link-reset soc-list__link">
-                <svg class="soc-list__icon">
-                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="soc-list__item" aria-label="ссылка на Linkedin">
-              <a href="" class="link-reset soc-list__link">
-                <svg class="soc-list__icon">
-                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="join">
+            <b class="footer__subtitle">присоединяйтесь</b>
+            <ul class="ul-reset soc-list">
+              <li class="soc-list__item" aria-label="ссылка на Instagram">
+                <a href="" class="link-reset soc-list__link">
+                  <svg class="soc-list__icon">
+                    <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-list__item" aria-label="ссылка на Twitter">
+                <a href="" class="link-reset soc-list__link">
+                  <svg class="soc-list__icon">
+                    <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-list__item" aria-label="ссылка на Facebook">
+                <a href="" class="link-reset soc-list__link">
+                  <svg class="soc-list__icon">
+                    <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-list__item" aria-label="ссылка на Linkedin">
+                <a href="" class="link-reset soc-list__link">
+                  <svg class="soc-list__icon">
+                    <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="footer-form__wrapper">
