Виправлено помилку в мобільному меню

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,9 @@
           <div class="mobile-menu__wrap">
             <ul class="ul-reset mobile-nav">
               <li class="mobile-nav__item">
-                <a href="" class="link-reset mobile-nav__link"> Студия </a>
+                <a href="./index.html" class="link-reset mobile-nav__link">
+                  Студия
+                </a>
               </li>
               <li class="mobile-nav__item">
                 <a
