--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
       </div>
     </div>
 
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
