--- a/portfolio.html
+++ b/portfolio.html
@@ -913,6 +913,6 @@
       </div>
     </footer>
 
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
